# esti

./: .carbon-kit  .containerignore  .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  COPYRIGHT  ChangeLog  DEVELOPMENT.md  ESTI- Additional Brief.md  INSTALL.md  LICENSE  README-ESTI.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  aorms.bat  compose.firm.yaml  compose.prod.yaml  compose.yaml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cursor/rules/: carbon-design-system.mdc  carbon-pattern-library.mdc  design-intelligence.mdc  esti-carbon-bootstrap.mdc
.github/workflows/: ci.yml  deploy.yml  desktop.yml  estimate.yml  vps-install.yml
aorms media/: .thumbnail  AORMS - Month 1 Posts (v1 flat).html  AORMS - Month 1 Posts.html  ESTI Pulse - Landing Animation.html  ESTI Pulse - Reel -1x1-.html  ESTI Pulse - Reel.html  ESTI Pulse - Standalone (src).html  ESTI Pulse Reel (Square).html  GST Compliance - Reel -1x1-.html  GST Invoice - Reel.html  MoM Revision - Reel -1x1-.html  MoM Revision - Reel.html  MoM Revision - Standalone (src).html  MoM Revision Reel (Square).html  Revision Register - Editorial -1x1-.html  Revision Register - Editorial.html  Revision Register - Mock UI -1x1-.html  Revision Register - Mock UI.html  Task Prioritization - Reel -1x1-.html  Task Prioritization - Reel.html  Task Prioritization - Standalone (src).html  Task Prioritization Reel (Square).html  editorial-scene.jsx  esti-scene.jsx  gst-scene.jsx  mockui-scene.jsx  mom-scene.jsx
aorms media/uploads/: INSTAGRAMCAMPAIGN.md
backend/: Dockerfile  Dockerfile.prod  drizzle.config.ts  package.json  tsconfig.json
backend/drizzle/: 0000_baseline.sql  0001_staff_roles.sql  0002_dashboard_layout.sql  0003_project_work_type.sql  0004_purchase_orders.sql  0005_drawing_versions.sql  0006_project_documents.sql  0007_office_letters_contracts.sql  0008_module_flags.sql  0009_demo_users.sql  0010_project_archive.sql  0011_activity_stream.sql  0012_comments.sql  0013_phase4_memory.sql  0014_general_project_stages.sql  0015_crif_decision_state.sql  0016_project_purge_retention.sql  0017_task_assignee_ids.sql  0018_rie_knowledge_bank.sql  0019_project_type_labels.sql  0020_simplify_phases.sql  0021_knowledge_bank_catalogs.sql  0022_steel_arranger.sql  0023_revision_intelligence.sql  0024_rie_phase2.sql  0025_phase5_foundation.sql  0026_portal_submissions.sql  0027_consultant_submissions.sql  0028_submission_messages.sql  0029_contractors.sql  0030_tenders.sql  0031_tender_bids.sql  0032_portal_revision_category.sql  0033_bbmp_rule_engine.sql  0034_org_mode_hr_archive.sql  0035_attendance.sql  0036_bbmp_extended_rules.sql  0037_bylaw_postconstruction.sql  0038_spec_catalog.sql  0039_escalation_settings.sql  (+186 more)
backend/scripts/: gen-cpwd-seed.mjs
backend/src/: env.test.ts  env.ts  index.ts
containers/: Containerfile  README.md  apache-site.conf  apply-esti-defaults.php  apply-esti-defaults.ps1  entrypoint.sh  env.example  install.forced.php  php.ini  podman-compose.yml  start-dev.ps1  stop-dev.ps1
deploy/: .env.production.example  README.md  backup.sh  bootstrap.sh  cleanup-vps.sh  deploy.sh  fetch-installers.sh  install-admin-console.sh  install-demo.sh  install-enterprise.sh  install-ese.sh  install-firm.sh  install-surface-tls.sh  install-wiki-tls.sh  install.sh  lib.sh  migration-manifest.sql  nginx-ese.conf  nginx-proxy.conf  restore-drill.sh  restore.sh  setup-vps.sh  test-migration-roundtrip.sh  update.sh  verify-frontend.sh
desktop/: .gitignore  README.md
desktop/scripts/: build-editions.mjs  build-frontend.mjs  bundle-backend.mjs  package-components.mjs  preflight.mjs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs
desktop/src-tauri/src/provision/: config.rs  download.rs  manifest.rs  mod.rs  unpack.rs
desktop/src-tauri/src/supervisor/: backend.rs  health.rs  mod.rs  postgres.rs
docs/: ADOPTING-THE-KIT.md  HCW-DESIGN-PLAYBOOK.md  HCW-UX-FRAMEWORK.md  HCW-UX-PROCESS.md  HCW-UX.md  KITS.md  react-carbon-ui-roadmap.md
docs/archive/: README.md
docs/esti/: ACCESS-HIERARCHY.md  ACCESS-MODEL.md  ADMIN-CONSOLE-API.md  ADMIN-GUIDE.md  AEC-PLATFORM.md  AORMS-BRANDING-KIT.md  AORMS-CONSULTANCY-CASE-STUDY.md  AORMS-CONSULTANCY-OPERATING-MODEL-AND-ARCHITECTURE.md  AORMS-CONSULTANCY-SOP-CASE-STUDY.md  AORMS-CONSULTING-FRAMEWORKS.md  AORMS-DEVELOPMENT-SPEC.md  (+85 more)
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
ese/: Dockerfile.prod  README.md  package.json  tsconfig.json
estimate/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
estimate/backend-cpp/: .gitignore  CMakeLists.txt  README.md
estimate/backend-cpp/packaging/: aorms-estimate-backend.service  default.env  postinst  postrm
estimate/backend-cpp/src/: bbs.hpp  bbs_engine.cpp  db.cpp  db.hpp  estimate.cpp  main.cpp  numeric.hpp  sha256.hpp
estimate/desktop-cpp/: CMakeLists.txt  README.md
estimate/desktop-cpp/app/: main.cpp
estimate/desktop-cpp/src/: bbs_engine.hpp  capi.cpp  capi.hpp  db.cpp  estimate.hpp
estimate/desktop-cpp/tests/: test_capi.cpp  test_engine.cpp
estimate/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
estimate/src-tauri/src/: lib.rs  main.rs
frontend/: Dockerfile.dev  Dockerfile.prod  admin.html  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
htdocs/: .htaccess  index.php  main.inc.php  security.txt  version.inc.php
logo resources/: AORMS logo.af  estti logo.af
scripts/: build-dev-images.ps1  licenses.mjs  quickstart.ps1  quickstart.sh  setup-carbon-kit.mjs  smoke-health.sh
worker/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
worker/esti_worker/: __init__.py  config.py  db.py  main.py  storage.py
worker/esti_worker/jobs/: __init__.py  dxf.py  pdf.py  pdf_to_markdown.py  reconcile.py
worker/tests/: test_jobs.py  test_pdf_compliance.py  test_retry_dlq.py  test_storage.py
(+1481 files in other folders)
