[project]
name = "esti-worker"
version = "0.0.0"
description = "ESTI AORMS Python worker — DXF takeoff, PDF rendering, reconciliation imports"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
