[package]
name = "esti-desktop"
version = "0.1.0"
description = "ESTI AORMS — native desktop shell"
authors = ["Holagundi Consulting Works"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "esti_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
# Bundled local PostgreSQL: downloads/locates official PG binaries and drives
# initdb / start / stop. Vendor the binaries for an offline installer (P3).
postgresql_embedded = "0.18"
# Readiness polling against the backend sidecar.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# Free-port selection for the backend + Postgres.
portpicker = "0.1"
rand = "0.8"
log = "0.4"

[features]
# Default Tauri custom-protocol feature for production builds.
custom-protocol = ["tauri/custom-protocol"]
