[package]
name = "esti-desktop"
version = "0.1.0"
description = "ESTI AORMS — native desktop shell"
authors = ["Holagundi Consulting Works"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "esti_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
# Bundled local PostgreSQL: downloads/locates official PG binaries and drives
# initdb / start / stop. Vendor the binaries for an offline installer (P3).
postgresql_embedded = "0.18"
# Readiness polling against the backend sidecar + Manager payload downloads
# (HTTPS via rustls so there's no system OpenSSL dependency; streamed to disk).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Free-port selection for the backend + Postgres.
portpicker = "0.1"
rand = "0.8"
log = "0.4"
# Manager provisioning: verify the hub's signed component manifest (Ed25519,
# same key that signs licence tokens) and check each downloaded artifact's
# SHA-256 before it is ever executed.
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"

[features]
# Default Tauri custom-protocol feature for production builds.
custom-protocol = ["tauri/custom-protocol"]
