[package]
name = "aorms-estimate"
version = "0.1.0"
description = "AORMS Estimate — offline estimating desktop app"
authors = ["Holagundi Consulting Works"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "aorms_estimate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
# Default Tauri custom-protocol feature for production builds.
custom-protocol = ["tauri/custom-protocol"]
